# subversion-via-focal-points-repro

./: QUICKSTART.md  README.md  STATUS.md  config.yaml  demo.py  demo_simple.py  main.py  pyproject.toml  requirements.txt
experiments/: analyze_results.py  run_experiment.py
prompts/: system_prompts.py
src/: __init__.py  backdoor_detector.py  experiment.py  meta_models.py  monitor.py  policy.py  utils.py
tests/: test_meta_models.py  test_utils.py
